--- a/style.css
+++ b/style.css
@@ -24,66 +24,74 @@ body{
 .header{
         width:100%;
         height:10%;
+      
         background-color: #e63946;
-              display: inline-block;
+        
               color:#f1faee;
               display: flex;
               justify-content: center;
         
-
+        align-items: center;
 }
 
 
 .main{
         height:85%;
         width:100%;
-    
-        display: flex;
+
+        display: flex
 }
 
 .section{
-        width:100%;
+        width:80%;
         height:100%;
 padding-right:2%;
         padding-left:2%;
+      
+    
+        
 }
 .about{
+      height:20%;
+      width:100%;
+    
+        display: flex;
+
+      flex-direction: column;
       
-        width:100%;
+   
 
 }
-.about-content{
-        font-size: 18px;
+.gradient{
+        color:white;
+    
+        background: linear-gradient(90deg, rgb(58,123,213) 0%, rgb(0,212,255) 100%);
+        padding:1%;
 }
+
+
 .skills-section{
      width:100%;
-     
+     height:20%;
+  
     
 }
 
-.skills{
-        list-style-type: none;
-        display: flex;
-        padding: 0%;
+
+
+
+
+ .hobbies{
+
+width:100%;
 }
-
-
-.skill{
-        border:2px solid black;
-        font-size: 16px;
-        padding: 0.75%;
-        margin-left:1%;
-        margin-right:1%;
-    
+.hobbies h2{
         text-align: center;
-      
 }
-/* .hobbies{
-
-        padding-right:5%;
-        padding-left: 5%;
+.hobby{
+        text-align: center;
 }
-.hobbies-list{
+/*.hobbies-list{
         list-style-type: none;
         display: flex;
         flex-direction: column;
@@ -94,52 +102,78 @@ padding-right:2%;
         padding-top:5%;
         padding-bottom:5%;
 } */
-.project-content{
-        font-size: 18px;
+
+.projects{
+        width:100%;
+        height:20%;
+    
+     
 }
+
+
+
+
 .border{
         border-bottom: 1px solid black;
 }
 .aside{
-       
+        width: 25%;
         height:100%;
         background-color:#a9def9;
         display: flex;
         flex-direction: column;
+        align-items: center;
+     
       
 }
+.educations{
+        height:20%;
+        width:100%;
 
+        
+}
+
+.education p{
+        margin:0%;
+}
 
 .contacts{
         width:100%;
-        height:15%;
-     
-        display: flex;
-        flex-direction: column;
-        
-        align-items: center;
+        height:16%;
+        padding:3%;
+        box-sizing: border-box;
+
+      
+      
   
+}
+.contacts h2{
+padding:2%;
+text-align: center;
+margin: 0%;
 }
 
 .contact{
         margin:0%;
         padding:2%;
         color:black;
-       
+        text-align: center;
+
       
 }
 .profile-photo{
-        width:80%;
-        height:80%;
-         margin-left:5%;
-         margin-right:5%;   
-            border-radius:12%;
+        width:100%;
+        height:100%;
         
+
+      
+            border-radius:12%;
+       
 }
 .image-container{
-        height:45%;
-        width:100%;
-     
+ 
+        width:70%;
+        padding:2%;
         display:flex;
         justify-content:center;
         align-items:center;
@@ -150,3 +184,55 @@ padding-right:2%;
 
                 background-color: #1d3557;
 }
+
+
+@media only screen and (max-width:425px)  {
+      .contact{
+        font-size: 14px;
+        padding:0%;
+        padding-top:2%;
+        padding-right:2%;
+      }  
+      .aside{
+        width: 62%;
+}
+.about{
+        height:27%;
+}
+.about-title{
+        margin: 0%;
+}
+.skills-section{
+        height:15%;
+}
+.skills-section h3{
+        margin-bottom: 1%;
+}
+.project h4{
+        margin:0%;
+}
+.project-content{
+        margin:0%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+}
+
+.education h4{
+        margin:0%;
+}
+.education p{
+        padding-top:2%;
+        padding-bottom:2%;
+}
+.education h5{
+        margin:0%;
+}
+.contacts h2{
+font-size: 18px;
+padding:10px;
+}
+.hobbies h2{
+        font-size: 18px;
+        padding:10px;   
+}
+
